--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   const photoContainer = document.getElementById("photos");
   for (var i = 0; i < 34; i++) {
     const img = document.createElement("img");
-    img.setAttribute('src', `https://github.com/chaegami/chaegami.github.io/blob/master/resizedweddingphotos/wedding${i}.jpg`);
+    img.setAttribute('src', `https://github.com/chaegami/chaegami.github.io/blob/master/resizedweddingphotos/wedding${i}.jpg?raw=true`);
     setTimeout(function() {
       photoContainer.append(img);
     }, 1000);
